<resources>
    <string name="app_name">SoundboardApp</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launchpad_imagebutton_orange">launchpad_imageButton_orange</string>
    <string name="launchpad_imagebutton">launchpad_imageButton</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setup">Setup</string>
    <string name="no_default_audio_found">No default audio found.</string>
    <string name="ioexception">IOException</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="a3">A3</string>
    <string name="upload">upload</string>
    <string name="upload_text" />
    <string name="upload_audio_file">Upload audio file:</string>
    <string name="unable_to_read_file">Unable to read file.</string>
    <string name="file_successfully_uploaded">File successfully uploaded</string>
    <string name="select_button_to_set_audio_to">Select button to set audio</string>
    <string name="select_audio_to_save_to_button" >Select audio to bind to button</string>
    <string name="press_to_save_audio_press_again_to_stop">Tap to record audio, tap again to stop</string>
    <string name="save_pad_audio_combination">Save pad-audio combination</string>
    <string name="save_button_audio_combination">Save button-audio combination</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="c3">C3</string>
    <string name="d1">D1</string>
    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="select_a_pad">Select pad</string>
    <string name="audio_spinner_item">audio_spinner_item</string>
    <string name="audio_and_pad_bound">Audio and pad bound</string>
    <string name="this_file_already_exists">This file already exists.</string>
    <string name="audio_editor">Audio Editor</string>
    <string name="audio_file_name">Audio File Name</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="select_a_song_to_edit">Select a Song to Edit</string>
    <string name="save">save</string>
    <string name="play_pause">Play/Pause</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="successfully_saved_please_rebind_to_pad">Successfully saved, please rebind to pad</string>
</resources>