<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioEditorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editor_pitch_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/pitch"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_speed_textview" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/select_a_song_to_edit"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/editor_audio_spinner"
            android:layout_width="301dp"
            android:layout_height="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/editor_audioName_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_audio_spinner"
            tools:text="@string/audio_file_name" />

        <TextView
            android:id="@+id/editor_speed_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:text="@string/speed"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_playPause_button" />


        <SeekBar
            android:id="@+id/editor_speed_seekbar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:max="10"
            android:progress="5"
            app:layout_constraintStart_toEndOf="@+id/editor_speed_textview"
            app:layout_constraintTop_toBottomOf="@+id/editor_playPause_button" />

        <SeekBar
            android:id="@+id/editor_pitch_seekbar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="280dp"
            android:layout_height="47dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="44dp"
            android:max="10"
            android:progress="5"
            app:layout_constraintStart_toEndOf="@+id/editor_pitch_textview"
            app:layout_constraintTop_toBottomOf="@+id/editor_speed_seekbar" />

        <SeekBar
            android:id="@+id/editor_progress_seekbar"
            android:layout_width="345dp"
            android:layout_height="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_audioName_textview" />

        <Button
            android:id="@+id/editor_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_pitch_seekbar" />

        <Button
            android:id="@+id/editor_playPause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/play_pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_progress_seekbar" />

        <TextView
            android:id="@+id/editor_elapsedTime_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toStartOf="@+id/editor_remainingTime_textview"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editor_audioName_textview"
            tools:text="@string/elapsed_time" />

        <TextView
            android:id="@+id/editor_remainingTime_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="208dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editor_elapsedTime_textview"
            app:layout_constraintTop_toBottomOf="@+id/editor_audioName_textview"
            tools:text="@string/remaining_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>